syntax = "proto2";

package uproctrace;

message timespec {
  required int64 sec = 1;
  optional int32 nsec = 2;
}

message stringlist {
  repeated string s = 1;
}

message proc_begin {
  required int32 pid = 1;
  optional int32 ppid = 2;
  optional string exe = 3;
  optional string cwd = 4;
  optional stringlist cmdline = 5;
  optional stringlist environ = 6;
}

message proc_end {
  required int32 pid = 1;
  optional timespec cpu_time = 2;
  optional timespec user_time = 3;
  optional timespec sys_time = 4;
  optional int64 max_rss_kb = 5;
}

message event {
  required timespec timestamp = 1;
  optional proc_begin proc_begin = 2;
  optional proc_end proc_end = 3;
}
